[package]
name = "rust"
version = "0.1.0"
authors = ["Alexander Seppälä <dev@timot.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
serde = {version = "1.0.101", features = ["derive"]}
rocket = "0.4.2"
rocket_contrib = "0.4.2"
ordered-float = "1.0.2"
reqwest = "0.9.20"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
